--- a/tucans-plantmatica/package.json
+++ b/tucans-plantmatica/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
