arreglando variable de entorno

--- a/tucans-plantmatica/d41d8cd9.env
+++ b/tucans-plantmatica/d41d8cd9.env
@@ -10,3 +10,5 @@ CORREO_TEST=wilburn.rath15@ethereal.email
 PASS_TEST=cACNejFhmFw92gkSYD
 CORREO_EMPRESA=addrianun@plantsmatica.online
 PASS=$#TUTANKAMON5728118064WORKSPACE
+
+API_URL=https://plantmatica-api.vercel.app//
