arreglando variable de entorno

--- a/tucans-plantmatica/d41d8cd9.env
+++ b/tucans-plantmatica/d41d8cd9.env
@@ -11,4 +11,4 @@ PASS_TEST=cACNejFhmFw92gkSYD
 CORREO_EMPRESA=addrianun@plantsmatica.online
 PASS=$#TUTANKAMON5728118064WORKSPACE
 
-API_URL=https://plantmatica-api.vercel.app/
+API_URL=plantmatica-api.vercel.app
