--- a/tucans-plantmatica/package.json
+++ b/tucans-plantmatica/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.8.3",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "animate.css": "^4.1.1",
     "next": "^12.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
