--- a/tucans-plantmatica/package.json
+++ b/tucans-plantmatica/package.json
@@ -23,6 +23,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/yup": "^0.29.13",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3"
   }
